<resources>
    <string name="app_name">MovieNightPlanner</string>

    <string name="current_date">June, 2019</string>
    <string name="add_event">ADD CALENDAR EVENT</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="last_date">30</string>
    <string name="year">Year</string>
    <string name="events">Events</string>
    <string name="movie">Movie</string>
    <string name="calender">Calender</string>
    <string name="event_title">Event Title</string>
    <string name="event_date">Date</string>
    <string name="event_venue">Venue</string>
    <string name="attendee_30">30</string>
    <string name="movie_year">Movie year</string>
    <string name="add_attendee">Add Attendee</string>
    <string name="Longitute">Long</string>
    <string name="movie_title">Movie Title</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="venue">Venue</string>
    <string name="latitude">Lat</string>
    <string name="save">Save</string>
    <string name="sort">Sort</string>
</resources>
