<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".activity.AddEventActivity">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_8dp"
            android:text="@string/event_title"
            android:textSize="@dimen/medium_text" />

        <EditText
            android:id="@+id/etEventTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_8dp"
            android:text="@string/movie"
            android:textSize="@dimen/medium_text" />

        <Spinner
            android:id="@+id/movieSpinner"
            android:layout_width="match_parent"
            android:layout_height="44dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_8dp"
            android:text="@string/start_date"
            android:textSize="@dimen/medium_text" />

        <EditText
            android:id="@+id/etStartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_8dp"
            android:clickable="true"
            android:editable="false"
            android:focusable="false"
            android:hint="Touch to select date and time" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_8dp"
            android:text="@string/end_date"
            android:textSize="@dimen/medium_text" />

        <EditText
            android:id="@+id/etEndDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_8dp"
            android:clickable="true"
            android:editable="false"
            android:focusable="false"
            android:hint="Touch to select date and time"
            android:inputType="datetime" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_8dp"
            android:text="@string/event_venue"
            android:textSize="@dimen/medium_text" />

        <EditText
            android:id="@+id/etVenue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="6">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16dp"
                android:layout_weight="1"
                android:text="@string/latitude"
                android:textSize="@dimen/medium_text" />

            <EditText
                android:id="@+id/etLat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_8dp"
                android:layout_weight="2"
                android:inputType="numberSigned|numberDecimal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16dp"
                android:layout_weight="1"
                android:text="@string/Longitute"
                android:textSize="@dimen/medium_text" />

            <EditText
                android:id="@+id/etLong"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_8dp"
                android:layout_weight="2"
                android:inputType="numberSigned|numberDecimal" />
        </LinearLayout>

        <Button
            android:id="@+id/addAttendee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_8dp"
            android:text="@string/add_attendee" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_8dp"
            android:text="@string/save" />


    </LinearLayout>
</ScrollView>