<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_8dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_8dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dimen_4dp">

            <TextView
                android:id="@+id/tvEventTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/event_title"
                android:textSize="@dimen/xlarge_text" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_date"
                android:textSize="@dimen/medium_text" />

            <TextView
                android:id="@+id/tvVenue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_venue"
                android:textSize="@dimen/medium_text" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvAttendeeCount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dimen_4dp"
            android:gravity="center"
            android:maxLines="1"
            android:padding="@dimen/dimen_8dp"
            android:text="@string/attendee_30"
            android:textSize="@dimen/xxlarge_text" />
    </LinearLayout>
</android.support.v7.widget.CardView>